Senior Frontend Developer (f/m/d) @realxdata GmbH - Rheingau Founders Portfolio     . vpTech - Front-end Developer. Job Application for Senior Front End Software Engineer at Domino Data Lab. Senior Front End Developer(Angular/HTML5/CSS3) - MAS Global Consulting - Career Page. Mid-Senior Front End Developer(Angula/HTML5/CSS3) - MAS Global Consulting - Career Page. Liferay, Inc. Careers - Frontend Engineer (client-facing). Job @ Daizu | sleep.ink (Berlin): Frontend Develop... | JOIN. Job @ Daizu | sleep.ink (Berlin): Frontend Develop... | JOIN. Software Engineer Frontend (f/m/d) - collect Artificial Intelligence GmbH. Verisk Front End Web Developer | SmartRecruiters. Job @ uptodate Ventures (Munich): Frontend Develop... | JOIN. Senior Front End Developer (Azure) - Mexico - Modus Create, Inc. - Career Page. Frontend Software Engineer - Grafana Labs. Job Application for Senior Front End Developer at Bandwidth. Job @ fintory (Duisburg): Front-end developer (m/f/d) | JOIN. Job @ SimScale (Munich): Senior Frontend Developer... | JOIN. RingCentral Careers - Front-end Engineer. Job @ AST Engineering  (Ottobrunn): Frontend Entwi... | JOIN. Senior Front End Developer (ReactJS) - Mexico - Modus Create, Inc. - Career Page. Job Application for Frontend Engineer, Defend at GitLab. Job Application for Frontend Engineer - Manage at GitLab. Job Application for Frontend Engineer, Defend at GitLab. Job Application for Frontend Engineer, Defend at GitLab. Job Application for Frontend Engineer, Defend at GitLab. Job Application for Frontend Engineer, Secure at GitLab. Job Application for Frontend Engineer, Secure at GitLab. Job Application for Frontend Engineer, Secure at GitLab. Job Application for Frontend Engineer - Manage at GitLab. Stellenangebot: Senior Frontend / Full Stack Developer (m/w/d) Automotive (Düsseldorf) – dasauge® Stellenmarkt. Stellenangebot: Frontend Developer (m/w/d) Automotive (Düsseldorf) – dasauge® Stellenmarkt. Stellenangebot: Frontend Entwickler (m/w/d) JavaScr

--- a/frontend.html
+++ b/frontend.html
@@ -38,8 +38,14 @@
   
     <div class="container">
 <!--Begin body here --> 
-<h5><a href='https://jobs.lever.co/vpTech/45d04549-e492-481f-a293-977691eb00e6'>vpTech - Front-end Developer</a></h5> 
+<h5><a href='https://rheingaufoundersportfolio.recruitee.com/o/senior-frontend-developer-fmd-realxdata-gmbh-1'>
+      Senior Frontend Developer (f/m/d) @realxdata GmbH - Rheingau Founders Portfolio
+    </a></h5> 
 <p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-11-01</p>
+<hr/>
+<h5><a href='https://jobs.lever.co/vpTech/45d04549-e492-481f-a293-977691eb00e6'>vpTech - Front-end Developer</a></h5> 
+<p><span class="badge badge-light">Warsaw</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
 <h5><a href='https://boards.greenhouse.io/dominodatalab/jobs/1939775'>Job Application for Senior Front End Software Engineer at Domino Data Lab</a></h5> 
@@ -78,7 +84,7 @@
 <p><span class="badge badge-light">Munich Munich M?nchen</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://moduscreate.applytojob.com/apply/jCIG3sHyRR/Senior-Front-End-Developer-Azure-Mexico'>Senior Front End Developer (Azure) - Mexico - Modus Create, Inc. - Career Page</a></h5> 
+<h5><a href='http://moduscreate.applytojob.com/apply/jCIG3sHyRR/Senior-Front-End-Developer-Azure-Mexico'>Senior Front End Developer (Azure) - Mexico - Modus Create, Inc. - Career Page</a></h5> 
 <p><span class="badge badge-light">Mexico Mexico  Mexico</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
@@ -114,7 +120,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/gitlab/jobs/4502526002'>Job Application for Frontend Engineer - Manage at GitLab</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/gitlab/jobs/4502526002'>Job Application for Frontend Engineer - Manage at GitLab</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
@@ -126,7 +132,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/gitlab/jobs/4502531002'>Job Application for Frontend Engineer, Defend at GitLab</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/gitlab/jobs/4502531002'>Job Application for Frontend Engineer, Defend at GitLab</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
@@ -138,11 +144,11 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/gitlab/jobs/4502536002'>Job Application for Frontend Engineer, Secure at GitLab</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/gitlab/jobs/4502536002'>Job Application for Frontend Engineer, Secure at GitLab</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/gitlab/jobs/4503491002'>Job Application for Frontend Engineer - Manage at GitLab</a></h5> 
+<h5><a href='https://boards.greenhouse.io/gitlab/jobs/4503491002'>Job Application for Frontend Engineer - Manage at GitLab</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
@@ -202,7 +208,7 @@
 <p><span class="badge badge-light">Berlin Berlin, Germany  Berlin Berlin</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/singular/jobs/4500388002'>Job Application for Front-end Web Developer (Temp) at Singular</a></h5> 
+<h5><a href='https://boards.greenhouse.io/singular/jobs/4500388002'>Job Application for Front-end Web Developer (Temp) at Singular</a></h5> 
 <p><span class="badge badge-light">San Francisco</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -216,7 +222,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/act-on-software/job/oNVsbfw5'>Act-On Software Careers - Sr. Software Engineer (Front-end)</a></h5> 
+<h5><a href='https://jobs.jobvite.com/act-on-software/job/oNVsbfw5'>Act-On Software Careers - Sr. Software Engineer (Front-end)</a></h5> 
 <p><span class="badge badge-light">Portland, Oregon</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -240,7 +246,7 @@
 <p><span class="badge badge-light">Oakland, CA</span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/qlik/job/o9ufbfwN'>Qlik Careers - Frontend Developer</a></h5> 
+<h5><a href='https://jobs.jobvite.com/qlik/job/o9ufbfwN'>Qlik Careers - Frontend Developer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -280,15 +286,15 @@
 <p><span class="badge badge-light">Paris, France</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='http://masglobalconsulting.applytojob.com/apply/BAY4lOgMbL/Senior-Front-End-DeveloperAngularReactHTML5CSS3'>Senior Front End Developer(Angular/React/HTML5/CSS3) - MAS Global Consulting - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://masglobalconsulting.applytojob.com/apply/BAY4lOgMbL/Senior-Front-End-DeveloperAngularReactHTML5CSS3'>Senior Front End Developer(Angular/React/HTML5/CSS3) - MAS Global Consulting - Career Page</a></h5> 
 <p><span class="badge badge-light">Tampa, FL Medellin, Colombia</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='http://masglobalconsulting.applytojob.com/apply/Qa9fJ5Giux/MidSenior-Front-End-DeveloperAngularReactHTML5CSS3'>Mid-Senior Front End Developer(Angular/React/HTML5/CSS3) - MAS Global Consulting - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://masglobalconsulting.applytojob.com/apply/Qa9fJ5Giux/MidSenior-Front-End-DeveloperAngularReactHTML5CSS3'>Mid-Senior Front End Developer(Angular/React/HTML5/CSS3) - MAS Global Consulting - Career Page</a></h5> 
 <p><span class="badge badge-light">Tampa, FL Medellin, Colombia</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://skatedeluxe.join.com/jobs/453409-frontend-entwickler-w-m-d'>Job @ skatedeluxe Skateshop (Leipzig): Frontend En... | JOIN</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://skatedeluxe.join.com/jobs/453409-frontend-entwickler-w-m-d'>Job @ skatedeluxe Skateshop (Leipzig): Frontend En... | JOIN</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -306,7 +312,7 @@
 <p><span class="badge badge-light">Newark, NJ</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://ngtechinc.zohorecruit.com/recruit/ViewJob.na?digest=tIjHuWh8jyuU41WZZ2OUxIUKlDv4AYZbzDzGhBKWbq0-&embedsource=CareerSite'>Sr Frontend Developer (React JS or Angular JS)</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://ngtechinc.zohorecruit.com/recruit/ViewJob.na?digest=tIjHuWh8jyuU41WZZ2OUxIUKlDv4AYZbzDzGhBKWbq0-&embedsource=CareerSite'>Sr Frontend Developer (React JS or Angular JS)</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
@@ -446,11 +452,7 @@
 <p><span class="badge badge-light">San Francisco Boston San Francisco Boston</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
-<h5><a href='https://www.okta.com/company/careers/engineering/senior-front-end-developer---identity-1526176/?gh_src=82a8057f1'>Senior Front End Developer - Identity | Okta</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-10-30</p>
-<hr/>
-
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/>
 
 <!--End body here -->
 
